--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.17.0"
+    "nodemon": "^2.0.15",
+    "sequelize": "^6.17.0",
+    "slugify": "^1.6.5"
+  },
+  "scripts": {
+    "start": "nodemon index.js"
   }
 }
