--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "axios": "^0.26.0",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "mysql2": "^2.3.3",
+    "node-fetch": "^3.2.1",
     "nodemon": "^2.0.15",
     "sequelize": "^6.17.0",
     "slugify": "^1.6.5"
